--- a/public/centric/css/app.css
+++ b/public/centric/css/app.css
@@ -1,4 +1,4 @@
-@import url(http://fonts.googleapis.com/css?family=Roboto:300,400,400italic,500,700);
+@import url(https://fonts.googleapis.com/css?family=Roboto:300,400,400italic,500,700);
 /*!
  *
  * Centric - Bootstrap Admin Template
